--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,10 +8,10 @@
             </a> 
             <div class="auth">
                 <a href="/login" class="login_button">
-                    Login
+                  Kirish
                 </a>
                 <a href="/signup" class="signup_button">
-                   Sign up
+                   Ro'yhatdan o'tish
                 </a>
 
             </div>
@@ -57,11 +57,18 @@
 
             </div>
             <div class="main_photo">
-                
+                <img src="public/icons/friends.jpg" alt="" class="friends_photo">
             </div>
         </div>
     </main>
 
+
+    <footer>
+        <svg style="margin-top: -50px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#0099ff" fill-opacity="1" d="M0,160L40,144C80,128,160,96,240,85.3C320,75,400,85,480,101.3C560,117,640,139,720,170.7C800,203,880,245,960,234.7C1040,224,1120,160,1200,144C1280,128,1360,160,1400,176L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path>
+          </svg>
+          
+    </footer>
 
 
 <%- include("./parts/footer.ejs") %> 
