--- a/src/public/scss/parts/__main.scss
+++ b/src/public/scss/parts/__main.scss
@@ -119,3 +119,90 @@ ul, ol {
          }
      }
  }
+
+
+ .profile_main {
+     .container {
+         padding: 40px 0px;
+         display: flex;
+         flex-direction: row;
+         align-items: center;
+         justify-content: space-between;
+
+         .profile-aside{
+             width: 25%;
+             display: flex;
+             flex-direction: column;
+             align-items: center;
+
+
+             a {
+                padding: 13px;
+                text-decoration: none;
+                text-align: center;
+                width: 50%;
+                background-color: blue;
+                border: none;
+                outline: none;
+                margin: 5px 0px;
+                border-radius: 6px;
+                outline: none;
+                color: white;
+                font-weight: 500;
+                font-size: 18px;
+             }
+
+             h4 {
+                 margin: 10px 0px;
+                 font-size: 24px;
+             }
+
+             ul {
+                 display: flex;
+                 flex-direction: column;
+
+
+                 li {
+                     padding: 10px;
+                     background-color: rgb(243, 243, 243);
+                     border-radius: 10px;
+                     margin-top: 5px;
+                 }
+             }
+         }
+     }
+
+
+     .profile-games {
+         width: 75%;
+         display: flex; 
+         align-items: stretch;
+
+
+         .table {
+             width: 100%;
+             border-spacing: 0px;
+
+             thead {
+                 tr {  
+                   
+                    th {
+                        padding: 20px;
+                        background-color: #a3a3a3;
+                    }
+                 }
+             }
+
+
+             tbody {
+                 tr{
+                     td{
+                         padding: 10px 20px;
+                         text-align: center;
+                         background-color: white;
+                     }
+                 }
+             }
+         }
+     }
+ }
