--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,16 +8,88 @@
                 Quizli
             </a> 
             <div class="auth">
-                  <a href="#">
+                  <a href="#" class="user">
                       <%= user.name %> 
                   </a>
 
-                  <a href="/exit">
+                  <a href="/exit" class="exit">
                     <img src="public/icons/logout.svg" alt="" class="logout">
                 </a>
             </div>
         </div>
     </header>
+
+
+    <main class="profile_main">
+        <div class="container">
+            <div class="profile-aside">
+                <a href="/create" class="create_btn">
+                    Yangi o'yin yaratish
+                </a>
+
+                <h4>
+                    Online
+                </h4>
+
+                <ul class="online_users_list">
+                    <li class="online_user">
+                        Sherali
+                    </li>
+                    <li class="online_user">
+                        Javohir
+                    </li>
+                    <li class="online_user">
+                        Asilbek
+                    </li>
+                </ul>
+            </div>
+            <div class="profile-games">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>
+                                Username
+                            </th>
+                            <th>
+                                Category
+                            </th>
+                            <th>
+                                Difficulty
+                            </th>
+                            <th>
+                                Questions
+                            </th>
+                            <th>
+
+                            </th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                           <td>
+                               Sherali
+                           </td>
+                           <td>
+                               Bolalar
+                           </td>
+                           <td>
+                               Hard
+                           </td>
+                           <td>
+                               9
+                           </td>
+                           <td>
+                               <a href="#" class="play_btn">
+                                   O'ynash
+                               </a>
+                           </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </main>
 
 
 <%- include("./parts/footer.ejs") %> 
